# napkin

./: .gitignore  AUTHORS  COPYING  Makefile.am  NEWS.xml  README  README.md  autogen.sh  configure.ac
include/: Makefile.am
include/napkin/: exception.h  types.h  util.h
include/napkin/st/: decode.h  download.h
lib/: .gitignore  Makefile.am  hypnodata.cc  st-decode.cc  st-download.cc  util.cc
src/: .gitignore  Makefile.am  db.cc  db.h  dialogs.cc  dialogs.h  napkin.cc  schema.sql  sleep_history.cc  sleep_history.h  sleep_timeline.cc  sleep_timeline.h  sqlite.h  widgets.cc  widgets.h
test/: .gitignore  Makefile.am  sleeptracker-decode.cc
